--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
@@ -22,11 +23,13 @@
     "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
+    "react-id-swiper": "^4.0.0",
     "react-loader-spinner": "^5.3.4",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.10"
+    "sweetalert2": "^11.7.10",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
