--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-aria-modal": "^5.0.0",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
