--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-id-swiper": "^4.0.0",
     "react-loader-spinner": "^5.3.4",
     "react-lottie": "^1.2.3",
+    "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.10",
