--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
@@ -20,6 +21,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-aria-modal": "^5.0.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-burger-menu": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -31,6 +33,7 @@
     "react-lottie": "^1.2.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.11.2",
+    "react-scroll-to-top": "^3.0.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.10",
     "swiper": "^9.4.0"
